<resources>
    <string name="harcayacak_paraniz">Your Daily Money</string>
    <string name="günde">a Day</string>
    <string name="harca">Spend</string>
    <string name="grafik">Graphic</string>
    <string name="nekadareklemeyapacaksiniz">How Much Will You Add?</string>
    <string name="günicindekalanparaniz">Day, Your Money</string>
    <string name="tumkayitlar">Previous Records</string>
    <string name="yok">None</string>
    <string name="hacanilanpara">Money Spend</string>
    <string name="paraniz">Your Money</string>
    <string name="son">The Last</string>
    <string name="gun">Day</string>
    <string name="eklenenpara">Added Money</string>
    <string name="tamam">Okey</string>
    <string name="yenigun">New Day</string>
    <string name="harcamagirmediniz">No Spend</string>
    <string name="gecerlibirharcamagiriniz">Enter a Valid Spend</string>
    <string name="oglendenonce">AM</string>
    <string name="oglendensonra">PM</string>
    <string name="kaydedildi">Saved</string>
    <string name="kayitbasarisiz">Registration Failed</string>
    <string name="gündoldo">Day Is Over</string>
    <string name="bütünkayıtlarınızsilinmekuzere">All your records will be deleted</string>
    <string name="silmeuyarisi">If you continue this process all your information will be deleted</string>
    <string name="iptal">CANCEL</string>
    <string name="sil">DELETE</string>
    <string name="eskiverilersilindi">Old Data is Deleted</string>
    <string name="harcamayok">Non Spend</string>
    <string name="ekle">Add</string>
    <string name="parolaolustur">Create Password</string>
    <string name="paroladegis">Change Password</string>
    <string name="degis">Change</string>
    <string name="kaldir">Remove</string>
    <string name="parolakaldir">Remove Passworld</string>
    <string name="parolaolusturuldu">Passworld Created</string>
    <string name="parolakaldirildi">Passworld Removed</string>
    <string name="paroladegistirildi">Passworld Changed (</string>
    <string name="olustur">Create</string>
    <string name="sizekalanpara">Remaining Money</string>
    <string name="ayrilanpara">Divided Money</string>
    <string name="odenenpara">Payed Money</string>
    <string name="odemenizitekrargiriniz">Re-enter your payment</string>
    <string name="ode">Pay</string>
    <string name="gerial">Are you sure you want to undo this payment?</string>
    <string name="evet">Yes</string>
    <string name="hayir">No</string>
    <string name="kaldirma">Are you sure you want to uninstall</string>
    <string name="silinde">Deleted</string>
    <string name="silmebasarisiz">Delete Failed</string>
    <string name="boskalamaz">Can not be empty</string>
    <string name="yeterliparanizyok">Not Enough Money</string>
    <string name="hata">Eror</string>
    <string name="eklendi">Added</string>
    <string name="paraayir">Divide Money</string>
    <string name="gunlukharcamagrafigi">Daily Spending Graph</string>
    <string name="kalanpara">Remaining Money</string>
    <string name="kalanparagrafigi">Remaining Money Graph</string>
    <string name="nealdiniz">What Did You Buy?</string>
    <string name="duzenle">Edit</string>
    <string name="silmekisdedigineeminmisiniz">Are you sure you want to delete</string>
    <string name="gundoldubusureicerisinde">Day is Over, in This Time ...</string>
    <string name="ileritarihsec">Please Select a Forward Date</string>
    <string name="tarihsec">Select Date</string>
    <string name="tarihayarla">Set Date</string>
    <string name="lutfenparagir">Please Enter Your Money</string>
    <string name="lutfensecimyapiniz">Please Select</string>
    <string name="nekadar">How Much</string>
    <string name="paragir">Enter Money</string>
    <string name="neicinparaayiracaksiniz">What Will You For Divided?</string>
    <string name="aciklamagir">Enter description</string>
    <string name="parolahatali">Password is incorrect</string>
    <string name="harcama">Spending</string>
    <string name="aylik">Monthly</string>
    <string name="haftalik">Weekly</string>
    <string name="ozel">Special</string>
    <string name="yillik">Yearly</string>
    <string name="kacparaayiracaksiniz">How Much Money Will You Pay</string>
    <string name="parolagir">Enter Passworld</string>
    <string name="yeniparola">New Passworld</string>
    <string name="parolatekrar">Again Passworld</string>
    <string name="buborclarodenmedi">These Debts Have Not Been Paid</string>
    <string name="kayitlar">All Data</string>
    <string name="aciklamayok">No Description</string>
    <string name="bütceniznekadar">How Much Money Do You Have?</string>
    <string name="paraayirmasorusu">Tax, Invoice etc. do you want to separate payments?</string>
    <string name="Para_Birimi">$</string>
    <string name="app_name">Follow Money</string>
    <string name="paranizyok">No Money (</string>
</resources>
