<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bycod.gunlukparahesapla.Para">


    <EditText
        android:id="@+id/Edittext_ParaGir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/buttonstyle"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="12"
        android:textColor="#1b8bb2"
        android:textSize="28dp"
        android:longClickable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mesajharcama" />

    <Button
        android:id="@+id/button_ileri"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/next"
        android:shadowColor="#606060"
        android:shadowDx="10"
        android:shadowDy="4"
        android:shadowRadius="10"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/Textview_tarih_mesaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="#606060"
        android:shadowDx="10"
        android:shadowDy="4"
        android:shadowRadius="10"
        android:textColor="#404040"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radiogroup"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toLeftOf="@+id/radiogroup"
        app:layout_constraintRight_toRightOf="@+id/radiogroup"
        app:layout_constraintTop_toTopOf="@+id/radiogroup"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/mesajharcama"
        android:layout_width="248dp"
        android:layout_height="49dp"
        android:text="@string/bütceniznekadar"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="#606060"
        android:shadowDx="10"
        android:shadowDy="4"
        android:shadowRadius="10"
        android:textColor="#505050"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ileri" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Edittext_ParaGir"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Edittext_ParaGir">

        <RadioButton
            android:id="@+id/rb_yillik"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:shadowColor="#606060"
            android:shadowDx="10"
            android:shadowDy="4"
            android:shadowRadius="10"
            android:text="@string/yillik"
            android:textColor="#404040"
            android:textSize="16dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_aylik"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:shadowColor="#606060"
            android:shadowDx="10"
            android:shadowDy="4"
            android:shadowRadius="10"
            android:text="@string/aylik"
            android:textColor="#404040"
            android:textSize="16dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_haftalik"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:shadowColor="#606060"
            android:shadowDx="10"
            android:shadowDy="4"
            android:shadowRadius="10"
            android:text="@string/haftalik"
            android:textColor="#404040"
            android:textSize="16dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/ozel"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:shadowColor="#606060"
            android:shadowDx="10"
            android:shadowDy="4"
            android:shadowRadius="10"
            android:text="@string/ozel"
            android:textColor="#404040"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/Para_Birimi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="5dp"
        android:shadowColor="#606060"
        android:shadowDx="10"
        android:shadowDy="4"
        android:shadowRadius="10"
        android:text="₺"
        android:textColor="#1b8bb2"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/Edittext_ParaGir"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Edittext_ParaGir"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"/>


</android.support.constraint.ConstraintLayout>
